Add feature to create a db record tree