@@ -20,12 +20,17 @@
 
 package br.com.pinter.tqdatabase.models;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Locale;
+import java.util.Optional;
 
 public class DbVariable {
     private String variableName;
     private DbVariable.Type type;
-    private final List<Object> values = new ArrayList<>();
+    private final List<Object> values = new LinkedList<>();
 
     public String getVariableName() {
         return variableName;
@@ -60,39 +65,68 @@ public class DbVariable {
     }
 
     public Object getFirstValue() {
-        return values.get(0);
+        return values.getFirst();
     }
 
     public String getFirstString() {
-        if(type == Type.STRING) {
-            return (String) values.get(0);
+        if (type == Type.STRING) {
+            return (String) values.getFirst();
         }
         throw new IllegalStateException("DbVariable not a string");
     }
 
     public Integer getFirstInteger() {
-        if(type == Type.INTEGER) {
-            return (Integer) values.get(0);
+        if (type == Type.INTEGER) {
+            return (Integer) values.getFirst();
         }
         throw new IllegalStateException("DbVariable not a string");
     }
 
     public List<String> getListString() {
         if (type == Type.STRING) {
-            List<String> list = new ArrayList<>();
-            values.forEach(f -> list.add((String) f));
-            return list;
+            return values.stream().map(f -> (String) f).toList();
         }
         return Collections.emptyList();
     }
 
     public List<Integer> getListInteger() {
         if (type == Type.INTEGER) {
-            List<Integer> list = new ArrayList<>();
-            values.forEach(f -> list.add((Integer) f));
-            return list;
+            return values.stream().map(f -> (Integer) f).toList();
         }
         return Collections.emptyList();
+    }
+
+    public List<Float> getListFloat() {
+        if (type == Type.FLOAT) {
+            return values.stream().map(f -> (Float) f).toList();
+        }
+        return Collections.emptyList();
+    }
+
+    public List<Boolean> getListBoolean() {
+        if (type == Type.BOOLEAN) {
+            return values.stream().map(f -> (Boolean) f).toList();
+        }
+        return Collections.emptyList();
+    }
+
+    public String asLine() {
+        String key = "";
+        StringBuilder value = new StringBuilder();
+        key = getVariableName();
+
+        switch (type) {
+            case STRING -> value.append(String.join(";", getListString()));
+            case INTEGER -> value.append(String.join(";", getListInteger().stream().map(String::valueOf).toList()));
+            case FLOAT -> value.append(String.join(";", getListFloat().stream()
+                    .map(f -> String.format(Locale.ENGLISH, "%.6f", f))
+                    .toList()));
+            case BOOLEAN -> value.append(String.join(";", getListBoolean().stream()
+                    .map(f -> f ? "1" : "0")
+                    .toList()));
+            default -> throw new IllegalArgumentException("unknown value");
+        }
+        return String.format("%s,%s,", key, value);
     }
 
     @Override
